--- a/templates/home/base.html
+++ b/templates/home/base.html
@@ -33,9 +33,11 @@
 <body>
 
 
-    <h1>{% if user.is_authenticated %} Logged in {% else %} No logged in {% endif %}</h1>
+{#    <h1>{% if user.is_authenticated %} Logged in {% else %} No logged in {% endif %}</h1>#}
 
-<h1>All books   <a style="width: 100px; height: 50px" href="http://127.0.0.1:8000/add/">Add new book</a> </h1>
+<h1>home  </h1>
+  <h1><a style="width: 100px; height: 50px" href="http://127.0.0.1:8000/add/">register</a></h1>
+  <h1><a style="width: 100px; height: 50px" href="http://127.0.0.1:8000/log/">login</a></h1>
 
     <div id="all_books">
 
