--- a/templates/home/verify_otp.html
+++ b/templates/home/verify_otp.html
@@ -9,7 +9,8 @@
 
     <form id="verifyOtpForm">
         <input type="text" id="otp" placeholder="کد ۶ رقمی"><br>
-        <button type="submit">تأیید</button>
+        <input type="submit" value="submit" id="تایید">
+{#        <button onclick="verifyOTP()">Verify</button>#}
     </form>
 
     <script>
@@ -18,7 +19,7 @@
 
         document.getElementById("verifyOtpForm").onsubmit = function(e) {
         e.preventDefault();
-        fetch("http://127.0.0.1:8000/accounts/verify-otp/", {
+        fetch("http://127.0.0.1:8000/verify_otp/", {
             method: "POST",
             headers: { "Content-Type": "application/json" },
             body: JSON.stringify({
@@ -26,17 +27,23 @@
                 otp: document.getElementById("otp").value
             })
         })
+
         .then(response => response.json())
-        .then(data => {
-            if (data.message) {
-                localStorage.setItem("username", data.username);
-                alert("ورود موفقیت‌آمیز!");
-                window.location.href = "dashboard.html";
-            } else {
-                alert("خطا: " + data.error);
-            }
-        });
+        .then(data => window.location.replace('http://127.0.0.1:8000/'))
+            .catch(error =>{
+                console.log(error)
+            })
+
     };
     </script>
 </body>
 </html>
+{#.then(response => response.json())#}
+{#            .then(data => {#}
+{#                if (data.message) {#}
+{#                    alert(data.message);#}
+{#                    window.location.href = 'profile.html';#}
+{#                } else {#}
+{#                    alert('Invalid OTP');#}
+{#                }#}
+{#            });#}
