--- a/templates/home/verify_otp.html
+++ b/templates/home/verify_otp.html
@@ -10,8 +10,10 @@
     <form id="verifyOtpForm">
         <input type="text" id="otp" placeholder="کد ۶ رقمی"><br>
         <input type="submit" value="submit" id="تایید">
+
 {#        <button onclick="verifyOTP()">Verify</button>#}
     </form>
+</body>
 
     <script>
         const urlParams = new URLSearchParams(window.location.search);
@@ -36,7 +38,7 @@
 
     };
     </script>
-</body>
+
 </html>
 {#.then(response => response.json())#}
 {#            .then(data => {#}
@@ -47,3 +49,49 @@
 {#                    alert('Invalid OTP');#}
 {#                }#}
 {#            });#}
+
+
+{#<!DOCTYPE html>#}
+{#<html>#}
+{#<head>#}
+{#    <title>Verify OTP</title>#}
+{#    <script>#}
+{#        function verifyOTP() {#}
+{#            let email = localStorage.getItem('email');#}
+{#            let otp = document.getElementById('otp').value;#}
+{#            fetch('http://127.0.0.1:8000/verify_otp/', {#}
+{#                method: 'POST',#}
+{#                headers: {'Content-Type': 'application/json'},#}
+{#                body: JSON.stringify({email: email, otp: otp})#}
+{#            })#}
+{#            .then(response => response.json())#}
+{#            .then(data => window.location.replace('http://127.0.0.1:8000/'))#}
+{#                .catch(error =>{#}
+{#                    console.log(error)#}
+{#                })#}
+{#            #}
+{#        }#}
+{##}
+{#        function resendOTP() {#}
+{#            let email = localStorage.getItem('email');#}
+{#            fetch('http://127.0.0.1:8000/resend-otp/', {#}
+{#                method: 'POST',#}
+{#                headers: {'Content-Type': 'application/json'},#}
+{#                body: JSON.stringify({email: email})#}
+{#            })#}
+{#            .then(response => response.json())#}
+{#            .then(data => window.location.replace('http://127.0.0.1:8000/'))#}
+{#                .catch(error =>{#}
+{#                    console.log(error)#}
+{#                })#}
+{#            ;#}
+{#        }#}
+{#    </script>#}
+{#</head>#}
+{#<body>#}
+{#    <h2>Verify OTP</h2>#}
+{#    <input type="text" id="otp" placeholder="Enter OTP">#}
+{#    <button onclick="verifyOTP()">Verify</button>#}
+{#    <button onclick="resendOTP()">Resend OTP</button>#}
+{#</body>#}
+{#</html>#}
