--- a/templates/home/register.html
+++ b/templates/home/register.html
@@ -85,7 +85,7 @@
 {#    <meta charset="UTF-8">#}
 {#    <meta name="viewport" content="width=device-width, initial-scale=1.0">#}
 {#    <title>ثبت‌نام</title>#}
-{#    <link rel="stylesheet" href="style.css">#}
+{#    <link rel="stylesheet" href="">#}
 {#</head>#}
 {#<body>#}
 {#    <div class="container">#}
@@ -111,6 +111,6 @@
 {#        <div id="message"></div>#}
 {#    </div>#}
 {##}
-{#    <script src="script.js"></script>#}
+{#    <script src=""></script>#}
 {#</body>#}
 {#</html>#}
